@@ -1,3 +1,8 @@
+2009-02-17  Richard Sandiford  <rdsandiford@googlemail.com>
+
+	* config/mips/mips.c (mips_gimplify_va_arg_expr): Fix invalid
+	tree sharing.
+
 2009-02-17  Ruan Beihong  <ruanbeihong@gmail.com>
 	    Richard Sandiford  <rdsandiford@googlemail.com>
 
